# ffmpeg4j

./: .gitignore  README.md  build.gradle  settings.gradle
src/main/cpp/: CMakeLists.txt
src/main/cpp/include/: config.h
src/main/cpp/include/fftools/: ffmpeg.h
src/main/cpp/src/fftools/: command.c
src/main/cpp/src/libffmpeg/: ffmpeg.c
src/main/java/com/ffmpeg4j/: FFmpeg.java  Main.java
src/test/java/com/ffmpeg4j/: FFmpegTest.java
